@@ -1,5 +1,6 @@
 Revision history for Gimp-Perl extension.
 
+	- added redeye (should be re-worked).
 	- added example scripts triangu gallery iland
         - fixed typo in examples/xachvision
 	- added examples/circular_text by Mike Gherlone.
